2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/usb.h (grub_usb_controller_dev): Make portstatus
	return grub_usb_err_t for cosistency. All users updated.

2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/mkimage.c (SzAlloc): Use attribute unused rather than dubious
	assigning to itself.

2013-11-05  Gustavo Luiz Duarte  <gustavold@linux.vnet.ibm.com>
2013-11-05  Paulo Flabiano Smorigo  <pfsmorigo@br.ibm.com>

	Issue separate DNS queries for ipv4 and ipv6

	Adding multiple questions on a single DNS query is not supportted by
	most DNS servers. This patch issues two separate DNS queries
	sequentially for ipv4 and then for ipv6.

	Fixes: https://savannah.gnu.org/bugs/?39710

	* grub-core/net/bootp.c (parse_dhcp_vendor): Add DNS option.
	* grub-core/net/dns.c (grub_dns_qtype_id): New enum.
	* (grub_net_dns_lookup): Now using separated dns packages.
	* (grub_cmd_nslookup): Add error condition.
	* (grub_cmd_list_dns): Print DNS option.
	* (grub_cmd_add_dns): Add four parameters: --only-ipv4, --only-ipv6,
	--prefer-ipv4, and --prefer-ipv6.
	* include/grub/net.h (grub_dns_option_t): New enum.
	* (grub_net_network_level_address): option added.

2013-11-05  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/video/fb/video_fb.c: Merge two blit functions
	into one.

2013-11-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c: Add sequences for home and end.

2013-11-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/legacy_parse.c: Fix handling of hercules and add
	graphics console.

2013-11-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/video/i386/pc/vga.c: Fix double bufferring and
	add mode 0x12.

2013-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Vendor power-on keys): Add XPS M1330M based on old
	e-mail by Per Öberg.

2013-11-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/i386/nthibr.c (GRUB_MOD_INIT): Fix typo in command
	name.
